Layout Debugging: header background doesn't widen page, footer stays on bottom of screen if content is short, logo changes size correctly on small screens, font of post author and date

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,9 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-
+html{
+  height: 100%;
+}
 
 /**
  * Basic styling
@@ -21,6 +23,9 @@ body {
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+    height:100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 
